update content about and arrival

--- a/index.html
+++ b/index.html
@@ -68,29 +68,31 @@
                     </div>
                     <div class="col-md-8 col-sm-6">
                          <br>
+                         <p>Jestem psychologiem i&nbsppsychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych.</p>
                          <ul>
-                              <li>Czujesz się przygnębiony i nie masz motywacji do działania&nbsp?</li>
-                              <li>Trudno Ci się skupić na obowiązkach&nbsp?</li>
+                              <li>Odczuwasz przygnębienie i&nbspbrak motywacji do działania&nbsp?</li>
                               <li>Masz poczucie, że przytłaczają Cię problemy&nbsp?</li>
-                              <li>Borykasz się z uczuciem lęku&nbsp?</li>
-                              <li>Twoje relacje z ludźmi nie układają się tak jakbyś tego chciał&nbsp?</li>
-                              <li>Nie radzisz sobie w sferze zawodowej&nbsp?</li>
-                              <li>Jesteś drażliwy i nerwowy&nbsp?</li>
-                              <li>Nie akceptujesz siebie&nbsp?</li>
+                              <li>Twoje relacje z&nbspludźmi nie układają się po Twojej myśli&nbsp?</li>
+                              <li>Borykasz się z&nbspuczuciem lęku i&nbspniepokoju&nbsp?</li>
+                              <li>Masz tendencje do ciągłego zamartwiania się&nbsp?</li>
+                              <li>Towarzyszy Ci niejasne dla Ciebie poczucie winy&nbsp?</li>
+                              <li>Walczysz z&nbsprozdrażnieniem i&nbspnerwowością&nbsp?</li>
+                              <li>Nie akceptujesz siebie&nbsp&nbsp?</li>
+                              <li>Odczuwasz wewnętrzną pustkę&nbsp?</li>
+                              <li>Masz kłopot z&nbsppodejmowaniem decyzji&nbsp?</li>
+                              <li>Nie radzisz sobie ze stresem&nbsp?</li>
+                              <li>Dotyka Cię cierpienie w&nbspsferze emocjonalnej&nbsp?</li>
                          </ul>
                          <br>
-                         <p>Jeśli, któryś z powyższych problemów Cię dotyczy - zapraszam na konsultacje. Spróbujemy razem rozpoznać trudności i&nbspzmierzyć się z nimi.</p>
+                         <p>Jeśli, któryś z&nbsppowyższych problemów Cię dotyczy - zapraszam na konsultacje. Spróbujemy razem rozpoznać trudności i&nbspzmierzyć się z&nbspnimi.</p>
                          <br>
-                         <p>Jestem psychologiem i&nbsppsychoterapeutą. Zajmuję się pomocą psychologiczną oraz psychoterapią osób dorosłych.
-                              W&nbspkontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
-                              Stanowi również niezbędną i&nbspsolidną podstawę do współpracy opartej na zaufaniu i&nbspzaangażowaniu.</p>
-
                          <div class="about-btn-container">
                               <button id="show-more-about" title="Psycholog Izabela Witkowicz" class="btn" onclick="$('.about-more-hidden').fadeIn();$('#hide-more-about').show();$('#show-more-about').hide();"><i class="fa fa-angle-double-down"></i> DOWIEDZ SIĘ WIĘCEJ</button>
                          </div>
-
                     </div>
                     <div class="col-md-12 col-sm-12 about-more-hidden">
+                         <p>W&nbspkontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
+                              Stanowi również niezbędną i&nbspsolidną podstawę do współpracy opartej na zaufaniu i&nbspzaangażowaniu.</p>
                          <p class="about-more-hidden">Pracuję w modalności psychodynamicznej. Celem mojej pracy jest doprowadzenie do trwałych zmian w sposobie przeżywania i&nbspfunkcjonowania pacjenta w&nbspróżnych obszarach życia, z&nbspktórymi ma trudność.
                               To pacjent przynosi siebie, swoje potrzeby, konflikty, problemy i&nbspwspólnie ustalamy co jest źródłem trudności i&nbspw jakim kierunku będziemy zmierzać.
                               Duże znaczenie ma dla mnie etyka, dlatego w&nbspswojej pracy kieruję się <a href="http://psychiatria.org.pl/sekcja_naukowa_psychoterapii">Kodeksem Zasad Etycznych Psychoterapeuty</a>. Dbając o&nbspjakość moich usług poddaję się regularnej superwizji.</p>
@@ -98,7 +100,7 @@
                          <p>Doświadczenie zawodowe zdobywałam między innymi w Sosnowieckim Szpitalu Miejskim w Oddziale Psychiatrycznym dla Chorych Somatycznie oraz w Centrum Zdrowia Psychicznego Feniks w Katowicach zarówno w Poradni Zdrowia Psychicznego, jak i na Dziennych Oddziałach Psychiatrycznych dla dorosłych i dla dzieci.</p>
                          <p>Aktualnie pracuję w Centrum Zdrowia Psychicznego Feniks w Katowicach w Poradni Zdrowia Psychicznego, w Dziennym Oddziale Psychiatrycznym oraz w Dziennym Oddziale Leczenia Nerwic.</p>
                          <div class="text-align-center">
-                              <button title="Psychoterapia Witkowicz - ukryj treść" id="hide-more-about" class="btn about-more-hidden" onclick="$('.about-more-hidden').fadeOut();$('#hide-more-about').hide();$('#show-more-about').show();"><i class="fa fa-angle-double-up"></i> ZWIŃ</button>
+                              <button title="Psychoterapia Witkowicz - ukryj dodatkowe informacje" id="hide-more-about" class="btn about-more-hidden" onclick="$('.about-more-hidden').fadeOut();$('#hide-more-about').hide();$('#show-more-about').show();"><i class="fa fa-angle-double-up"></i> UKRYJ</button>
                          </div>
                     </div>
                </div>
@@ -201,7 +203,7 @@
                          <div class="section-title text-align-center">
                               <h2>KONTAKT</h2>
                          </div>
-                         <div class="contact-info">
+                         <div class="contact-info" >
                               <div class="col-md-12 col-sm-12">
                                    <a href="tel:+48 795-876-144"><p><i class="fa fa-phone"></i> +48 795-876-144</p></a>
                               </div>
@@ -209,7 +211,7 @@
                                    <p><i class="fa fa-envelope-o"></i> <a class="contact-mail" href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></p>
                               </div>
                          </div>
-                         <div class="col-md-12 col-sm-12 justify-text-desktop appointment-invitation-text">
+                         <div class="col-md-12 col-sm-12 justify-text-desktop appointment-invitation-text text-align-center">
                               <p>Zapraszam do kontaktu telefonicznego lub mailowego. W&nbspsytuacji, gdy nie odbieram telefonu - oddzwonię.</p>
                               <p>Zachęcam również do wysłania sms-a z zapytaniem o&nbspmożliwy termin spotkania.</p>
                          </div>
@@ -222,25 +224,37 @@
      <section id="places" class="background-gray">
           <div class="row">
                <div class="container">
-                    <div class="col-md-12 col-sm-12 offset-content-below">
-                         <h2 class="text-align-center">GDZIE PRZYJMUJĘ</h2>
+                    <div class="col-md-12 col-sm-12 offset-content-below text-align-center">
+                         <h1>Psychoterapia Katowice</h1>
+                         <h2 >GDZIE PRZYJMUJĘ</h2>
                     </div>
                     <div class="col-md-6 col-sm-6">
                          <div class="footer-thumb">
                               <div class="opening-hours">
                                    <h4>Centrum Zdrowia Psychicznego Feniks</h4>
-                                   <p>Katowice, ul. Witosa 21</p>
+                                   <p><b>Katowice, ul. Witosa 21</b></p>
                               </div>
                               <a target="_blank" href="https://www.google.pl/maps/place/Centrum+Zdrowia+Psychicznego+%22Feniks%22/@50.2594817,18.9707387,15z/data=!4m12!1m6!3m5!1s0x0:0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!8m2!3d50.2594817!4d18.9707387!3m4!1s0x0:0x8ceebf977ab4a43f!8m2!3d50.2594817!4d18.9707387">
                                    <img class="places-map" src="images/Map_Feniks.png" alt="Dojazd Feniks"/>
                               </a>
+                              <div class="arrival-description">
+                                   <p>Dojazd autobusem:
+                                        <br>
+                                        - przystanek Osiedle Witosa Centrum – numery: 51, 70, 109, 115, 130, 138, 165, 177, 193, 900
+                                        <br>
+                                        - przystanek Osiedle Witosa Droga Kochłowicka – numery: 70, 115, 120, 130, 138, 165, 177, 193, 632, 880, 900,
+                                   </p>
+                                   <p>Dojazd samochodem:<br>
+                                        Gabinet jest w odległości 400m od zjazdu z autostrady A4. Należy zjechać w zjazd „Załęska Hałda Os. Witosa”. CZP Feniks znajduje się po prawej stronie drogi, zaraz za budynkiem Szkoły Podstawowej.
+                                   </p>
+                              </div>
                          </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
                          <div class="footer-thumb">
                               <div class="opening-hours">
                                    <h4>Centrum Psychologiczne PozaCzasem</h4>
-                                   <p>Katowice, ul. św Jana 11</p>
+                                   <p><b>Katowice, ul. św Jana 11</b></p>
                               </div>
                               <a target="_blank" href="https://www.google.com/maps/place/Centrum+Psychologiczne+Pozaczasem/@50.2580939,19.0191722,17z/data=!3m1!4b1!4m5!3m4!1s0x4716ce4818d17005:0x49f340d7ac02e511!8m2!3d50.2580939!4d19.0213609">
                                    <img class="places-map" src="images/Map_PozaCzasem.png" alt="Dojazd PozaCzasem"/>
