added activity section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <base href="https://www.psychoterapia-slaskie.pl" />
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
-     <link rel="stylesheet" href="css/style_1807212226.css">
+     <link rel="stylesheet" href="css/style_1807221122.css">
      <link rel="icon" href="./images/icon.png">
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -158,8 +158,46 @@
           </div>
      </section>
 
+     <section id="activity" class="content-section background-gray">
+          <div class="container">
+               <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                         <h2 class="text-align-center">CZYM SIĘ ZAJMUJE</h2>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="col-md-12 col-sm-12 text-align-center">
+                         <p>Do kontaktu zapraszam osoby, które borykają się z następującymi trudnościami:</p>
+                    </div>
+                    <div class="col-md-4">
+                         <ul>
+                              <li>Zaburzenia nastroju: m.in. depresja</li>
+                              <li>Zaburzenia lękowe: m. in. nerwica</li>
+                              <li>Zaburzenia osobowości</li>
+                              <li>Zaburzenia psychotyczne</li>
+                         </ul>
+                    </div>
+                    <div class="col-md-4">
+                         <ul>
+                              <li>Kryzysy życiowe</li>
+                              <li>Doświadczanie przemocy</li>
+                              <li>Agresja</li>
+                              <li>Brak asertywności</li>
+                         </ul>
+                    </div>
+                    <div class="col-md-4">
+                         <ul>
+                              <li>Niska samoocena</li>
+                              <li>Niemożność stworzenia satysfakcjonujących relacji międzyludzich</li>
+                              <li>Bóle o podłożu psychicznym</li>
+                              <li>Odczuwanie emocjonalnego cierpienia</li>
+                         </ul>
+                    </div>
+               </div>
+          </div>
+     </section>
 
-     <section id="prices" class="content-section text-align-center background-gray">
+
+     <section id="prices" class="content-section text-align-center">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
@@ -196,7 +234,7 @@
      </section>
 
 
-     <section id="appointment" class="content-section">
+     <section id="appointment" class="content-section background-gray">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
@@ -221,7 +259,7 @@
           </div>
      </section>
 
-     <section id="places" class="background-gray">
+     <section id="places">
           <div class="row">
                <div class="container">
                     <div class="col-md-12 col-sm-12 offset-content-below text-align-center">
