added activity section

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                     </div>
                     <div class="col-md-4">
                          <ul>
-                              <li>Zaburzenia nastroju: m.in. depresja</li>
-                              <li>Zaburzenia lękowe: m. in. nerwica</li>
+                              <li>Zaburzenia nastroju: m.in. <b>depresja</b></li>
+                              <li>Zaburzenia lękowe: m. in. <b>nerwica</b></li>
                               <li>Zaburzenia osobowości</li>
                               <li>Zaburzenia psychotyczne</li>
                          </ul>
