--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
-                         <h2 class="text-align-center">CZYM SIĘ ZAJMUJE</h2>
+                         <h2 class="text-align-center">CZYM SIĘ ZAJMUJĘ</h2>
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-md-12 col-sm-12 text-align-center">
@@ -187,7 +187,7 @@
                     <div class="col-md-4">
                          <ul>
                               <li>Niska samoocena</li>
-                              <li>Niemożność stworzenia satysfakcjonujących relacji międzyludzich</li>
+                              <li>Problemy w relacjach międzyludzkich</li>
                               <li>Bóle o podłożu psychicznym</li>
                               <li>Odczuwanie emocjonalnego cierpienia</li>
                          </ul>
