update styles and text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <meta name="keywords" content="psycholog Katowice, psychoterapia Katowice, nerwica, depresja">
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-     <base href="https://www.psychoterapia-slaskie.pl" />
+     <base href="https://psychoterapia-slaskie.pl" />
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
      <link rel="stylesheet" href="css/style_1807221122.css">
@@ -106,8 +106,6 @@
                </div>
           </div>
      </section>
-
-
      <section id="offer" class="content-section">
           <div class="container">
                <div class="row">
@@ -139,7 +137,6 @@
                               </div>
                          </div>
                     </div>
-
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
                               <a href="#">
@@ -147,18 +144,16 @@
                               </a>
                               <div class="news-info">
                                    <h3><a href="#">Psychoterapia indywidualna</a></h3>
-                                   <p>Jest formą leczenia. Przeznaczona jest dla osób, których trudności mają bardziej utrwalony charakter i&nbsprzutują na codzienne funkcjonowanie, często w&nbspróżnych obszarach życia (np. utrudniają budowanie relacji międzyludzkich).
+                                   <p>Jest formą leczenia. Przeznaczona dla osób, których trudności mają bardziej utrwalony charakter i&nbsprzutują na codzienne funkcjonowanie, często w&nbspróżnych obszarach życia (np. utrudniają budowanie relacji międzyludzkich).
                                         Jest to cykl regularnych spotkań odbywających się 1-2&nbsprazy w&nbsptygodniu.
-                                        Długość trwania psychoterapii jest uzależniona od indywidualnych potrzeb i&nbspcharakteru problemu, z którym zgłasza się pacjent.</p>
+                                        Długość trwania psychoterapii zależy od indywidualnych potrzeb i&nbspcharakteru problemu, z którym zgłasza się pacjent.</p>
                               </div>
                          </div>
                     </div>
-
                </div>
           </div>
      </section>
-
-     <section id="activity" class="content-section background-gray">
+     <section id="activity" class="content-section">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
@@ -195,9 +190,7 @@
                </div>
           </div>
      </section>
-
-
-     <section id="prices" class="content-section text-align-center">
+     <section id="prices" class="content-section text-align-center background-gray">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
@@ -206,7 +199,7 @@
                          </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                         <div class="news-thumb">
+                         <div class="price-thumb">
                               <div class="price-info">
                                    <h3><a href="#">Konsultacje psychologiczne</a></h3>
                                    <p>100-130 zł / 50 min</p>
@@ -214,7 +207,7 @@
                          </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                         <div class="news-thumb">
+                         <div class="price-thumb">
                               <div class="price-info">
                                    <h3><a href="#">Poradnictwo, pomoc psychologiczna</a></h3>
                                    <p>100-130 zł / 50 min</p>
@@ -222,7 +215,7 @@
                          </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                         <div class="news-thumb">
+                         <div class="price-thumb">
                               <div class="price-info">
                                    <h3><a href="#">Psychoterapia indywidualna</a></h3>
                                    <p>100-130 zł / 50 min</p>
@@ -232,9 +225,7 @@
                </div>
           </div>
      </section>
-
-
-     <section id="appointment" class="content-section background-gray">
+     <section id="appointment" class="content-section">
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12">
@@ -258,8 +249,7 @@
                </div>
           </div>
      </section>
-
-     <section id="places">
+     <section id="places" class="background-gray">
           <div class="row">
                <div class="container">
                     <div class="col-md-12 col-sm-12 offset-content-below text-align-center">
