--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <base href="https://psychoterapia-slaskie.pl" />
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
-     <link rel="stylesheet" href="css/style_1807221122.css">
+     <link rel="stylesheet" href="css/style_1.css">
      <link rel="icon" href="./images/icon.png">
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -91,14 +91,22 @@
                          </div>
                     </div>
                     <div class="col-md-12 col-sm-12 about-more-hidden">
-                         <p>W&nbspkontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji, zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
+                         <p>W&nbspkontakcie z&nbsppacjentem najważniejsze jest dla mnie zbudowanie relacji opartej na poczuciu akceptacji,
+                              zrozumienia i&nbspbezpieczeństwa, gdyż wierzę, że relacja taka ma wielką wartość terapeutyczną.
                               Stanowi również niezbędną i&nbspsolidną podstawę do współpracy opartej na zaufaniu i&nbspzaangażowaniu.</p>
-                         <p class="about-more-hidden">Pracuję w modalności psychodynamicznej. Celem mojej pracy jest doprowadzenie do trwałych zmian w sposobie przeżywania i&nbspfunkcjonowania pacjenta w&nbspróżnych obszarach życia, z&nbspktórymi ma trudność.
-                              To pacjent przynosi siebie, swoje potrzeby, konflikty, problemy i&nbspwspólnie ustalamy co jest źródłem trudności i&nbspw jakim kierunku będziemy zmierzać.
-                              Duże znaczenie ma dla mnie etyka, dlatego w&nbspswojej pracy kieruję się <a href="http://psychiatria.org.pl/sekcja_naukowa_psychoterapii">Kodeksem Zasad Etycznych Psychoterapeuty</a>. Dbając o&nbspjakość moich usług poddaję się regularnej superwizji.</p>
-                         <p>Ukończyłam studia psychologiczne na Uniwersytecie Śląskim w Katowicach ze specjalnością w Psychologii Klinicznej oraz Psychologii Zdrowia i Jakości Życia. Obecnie kształcę się w Katedrze Psychoterapii Collegium Medicum na Uniwersytecie Jagiellońskim w Krakowie. Szkolenie to jest atestowane przez Polskie Towarzystwo Psychiatryczne.</p>
-                         <p>Doświadczenie zawodowe zdobywałam między innymi w Sosnowieckim Szpitalu Miejskim w Oddziale Psychiatrycznym dla Chorych Somatycznie oraz w Centrum Zdrowia Psychicznego Feniks w Katowicach zarówno w Poradni Zdrowia Psychicznego, jak i na Dziennych Oddziałach Psychiatrycznych dla dorosłych i dla dzieci.</p>
-                         <p>Aktualnie pracuję w Centrum Zdrowia Psychicznego Feniks w Katowicach w Poradni Zdrowia Psychicznego, w Dziennym Oddziale Psychiatrycznym oraz w Dziennym Oddziale Leczenia Nerwic.</p>
+                         <p>Pracuję w&nbspmodalności psychodynamicznej. Zajmuję się między innymi leczeniem depresji, nerwic, zaburzeń osobowości.
+                              Moim celem jest niesienie pomocy w kryzysie emocjonalnym. Przynosicie Państwo do mnie swoje potrzeby, konflikty,
+                              problemy i&nbspwspólnie ustalamy co jest źródłem trudności oraz jakim kierunku będziemy zmierzać.
+                              Duże znaczenie ma dla mnie etyka, dlatego w swojej pracy kieruję się Kodeksem Zasad Etycznych Psychoterapeuty.
+                              Dbając o&nbspjakość moich usług poddaję się regularnej superwizji.</p>
+                         <p>Ukończyłam studia psychologiczne na Uniwersytecie Śląskim w&nbspKatowicach ze specjalnością w&nbspPsychologii Klinicznej
+                              oraz Psychologii Zdrowia i&nbspJakości Życia. Obecnie kształcę się w&nbspKatedrze Psychoterapii Collegium Medicum na
+                              Uniwersytecie Jagiellońskim w&nbspKrakowie. Szkolenie to jest atestowane przez Polskie Towarzystwo Psychiatryczne.</p>
+                         <p>Doświadczenie zawodowe zdobywałam między innymi w&nbspSosnowieckim Szpitalu Miejskim w&nbspOddziale Psychiatrycznym dla
+                              Chorych Somatycznie oraz w&nbspCentrum Zdrowia Psychicznego Feniks w&nbspKatowicach zarówno w&nbspPoradni Zdrowia Psychicznego,
+                              jak i&nbspna Dziennych Oddziałach Psychiatrycznych dla dorosłych i&nbspdla dzieci.</p>
+                         <p>Aktualnie pracuję w&nbspCentrum Zdrowia Psychicznego Feniks w&nbspKatowicach w&nbspPoradni Zdrowia Psychicznego,
+                              w&nbspDziennym Oddziale Psychiatrycznym oraz w&nbspDziennym Oddziale Leczenia Nerwic.</p>
                          <div class="text-align-center">
                               <button title="Psychoterapia Witkowicz - ukryj dodatkowe informacje" id="hide-more-about" class="btn about-more-hidden" onclick="$('.about-more-hidden').fadeOut();$('#hide-more-about').hide();$('#show-more-about').show();"><i class="fa fa-angle-double-up"></i> UKRYJ</button>
                          </div>
@@ -260,19 +268,19 @@
                          <div class="footer-thumb">
                               <div class="opening-hours">
                                    <h4>Centrum Zdrowia Psychicznego Feniks</h4>
-                                   <p><b>Katowice, ul. Witosa 21</b></p>
+                                   <h4>Katowice, ul. Witosa 21</h4>
                               </div>
                               <a target="_blank" href="https://www.google.pl/maps/place/Centrum+Zdrowia+Psychicznego+%22Feniks%22/@50.2594817,18.9707387,15z/data=!4m12!1m6!3m5!1s0x0:0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!8m2!3d50.2594817!4d18.9707387!3m4!1s0x0:0x8ceebf977ab4a43f!8m2!3d50.2594817!4d18.9707387">
                                    <img class="places-map" src="images/Map_Feniks.png" alt="Dojazd Feniks"/>
                               </a>
                               <div class="arrival-description">
-                                   <p>Dojazd autobusem:
+                                   <p><b>Dojazd autobusem:</b>
                                         <br>
                                         - przystanek Osiedle Witosa Centrum – numery: 51, 70, 109, 115, 130, 138, 165, 177, 193, 900
                                         <br>
                                         - przystanek Osiedle Witosa Droga Kochłowicka – numery: 70, 115, 120, 130, 138, 165, 177, 193, 632, 880, 900,
                                    </p>
-                                   <p>Dojazd samochodem:<br>
+                                   <p><b>Dojazd samochodem:</b><br>
                                         Gabinet jest w odległości 400m od zjazdu z autostrady A4. Należy zjechać w zjazd „Załęska Hałda Os. Witosa”. CZP Feniks znajduje się po prawej stronie drogi, zaraz za budynkiem Szkoły Podstawowej.
                                    </p>
                               </div>
@@ -282,18 +290,27 @@
                          <div class="footer-thumb">
                               <div class="opening-hours">
                                    <h4>Centrum Psychologiczne PozaCzasem</h4>
-                                   <p><b>Katowice, ul. św Jana 11</b></p>
+                                   <h4>Katowice, ul. św Jana 11</h4>
                               </div>
                               <a target="_blank" href="https://www.google.com/maps/place/Centrum+Psychologiczne+Pozaczasem/@50.2580939,19.0191722,17z/data=!3m1!4b1!4m5!3m4!1s0x4716ce4818d17005:0x49f340d7ac02e511!8m2!3d50.2580939!4d19.0213609">
                                    <img class="places-map" src="images/Map_PozaCzasem.png" alt="Dojazd PozaCzasem"/>
                               </a>
                               <div class="arrival-description">
-                              <p>
-                                   Gabinet znajduje się w&nbspśródmieściu 10 metrów od przystanku tramwajowego Katowice Św. Jana skąd odjeżdżają tramwaje o&nbspnumerach 6, 14, 16, 19, 23, 36.
-                                   <br>Lokalizacja pozwala również w&nbspbezproblemowy sposób dostać się autobusem lub własnym samochodem.
-                                   W&nbspprzypadku własnego pojazdu zalecam skorzystać z&nbspparkingu znajdującego się w&nbspGalerii Katowickiej gdzie każdy znajdzie miejsce, a&nbspprzez 2 godziny parking jest darmowy.
-                                   Gabinet znajduje się w&nbspodległości 400&nbspm od Galerii kierując się w&nbspstronę Katowickiego Rynku.
-                              </p>
+                                   <p><b>Dojazd tramwajem:</b><br>
+                                        - przystanek Katowice Św. Jana – numery: 6, 14, 16, 19, 23, 36
+                                        <br>
+                                        - przystanek Katowice Rynek/Teatr Śląski – numery: 0, 6, 7, 13, 14, 15, 16, 20, 23, 36, 40, 43
+                                   </p>
+                                   <p><b>Dojazd autobusem:</b><br>
+                                   Gabinet znajduje się w odległości 400m od budynku Dworca PKP/Galerii Katowickiej w&nbspKatowicach, z którego odjeżdża
+                                        większość linii autobusowych.
+                                   - przystanek Katowice Dworzec – numery: 0, 9, 10, 12, 37, 46, 48, 50, 51, 61, 110, 115, 193,
+                                        297, 600, 632, 672, 674, 689, 840, 910, 911, 930, 940, 950
+                                   </p>
+                                   <p><b>Dojazd samochodem:</b><br>
+                                   Warto skorzystać z parkingu w Galerii Katowickiej, która znajduje się w odległości 400m od gabinetu.
+                                        Można tam bezpłatnie parkować przez 2h.
+                                   </p>
                               </div>
                          </div>
                     </div>
