user-scalable no

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <meta name="description" content="Psycholog Katowice. Psychoterapia Katowice. Leczenie nerwicy, depresji, pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
      <meta name="keywords" content="psycholog Katowice, psychoterapia Katowice, nerwica, depresja">
      <meta name="author" content="Paweł Witkowicz">
-     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1">
      <base href="https://psychoterapia-slaskie.pl" />
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
