updated places style

--- a/index.html
+++ b/index.html
@@ -260,14 +260,13 @@
           <div class="row">
                <div class="container">
                     <div class="col-md-12 col-sm-12 offset-content-below text-align-center">
-                         <h1>Psychoterapia Katowice</h1>
                          <h2 >GDZIE PRZYJMUJĘ</h2>
                     </div>
                     <div class="col-md-6 col-sm-6">
                          <div class="footer-thumb">
                               <div class="opening-hours">
                                    <h4>Centrum Zdrowia Psychicznego Feniks</h4>
-                                   <h4>Katowice, ul. Witosa 21</h4>
+                                   <p><b>Katowice</b>, ul. Witosa 21</p>
                               </div>
                               <a target="_blank" href="https://www.google.pl/maps/place/Centrum+Zdrowia+Psychicznego+%22Feniks%22/@50.2594817,18.9707387,15z/data=!4m12!1m6!3m5!1s0x0:0x8ceebf977ab4a43f!2sCentrum+Zdrowia+Psychicznego+%22Feniks%22!8m2!3d50.2594817!4d18.9707387!3m4!1s0x0:0x8ceebf977ab4a43f!8m2!3d50.2594817!4d18.9707387">
                                    <img class="places-map" src="images/Map_Feniks.png" alt="Dojazd Feniks"/>
@@ -289,7 +288,7 @@
                          <div class="footer-thumb">
                               <div class="opening-hours">
                                    <h4>Centrum Psychologiczne PozaCzasem</h4>
-                                   <h4>Katowice, ul. św Jana 11</h4>
+                                   <p><b>Katowice</b>, ul. św Jana 11</p>
                               </div>
                               <a target="_blank" href="https://www.google.com/maps/place/Centrum+Psychologiczne+Pozaczasem/@50.2580939,19.0191722,17z/data=!3m1!4b1!4m5!3m4!1s0x4716ce4818d17005:0x49f340d7ac02e511!8m2!3d50.2580939!4d19.0213609">
                                    <img class="places-map" src="images/Map_PozaCzasem.png" alt="Dojazd PozaCzasem"/>
