removed hyperlinks from offer

--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
                     <div class="clearfix"></div>
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
-                              <a href="#">
+                              <a>
                                    <img src="images/offer_image_1_800x533.jpg" class="img-responsive offer-image" alt="Konsultacje psychologiczne">
                               </a>
                               <div class="news-info">
-                                   <h3><a href="#">Konsultacje psychologiczne</a></h3>
+                                   <h3><a>Konsultacje psychologiczne</a></h3>
                                    <p>Obejmują zazwyczaj 2–4&nbsppierwszych spotkań.
                                         Mają na celu ustalenie rodzaju problemu, z&nbspktórym zgłasza się pacjent, jego potrzeb i&nbspoczekiwań oraz dobór najlepszej formy pomocy i&nbspjej omówienie.</p>
                               </div>
@@ -134,11 +134,11 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
-                              <a href="#">
+                              <a>
                                    <img src="images/offer_image_2_800x533.jpg" class="img-responsive offer-image" alt="Poradnictwo, pomoc psychologiczna">
                               </a>
                               <div class="news-info">
-                                   <h3><a href="#">Poradnictwo, pomoc psychologiczna</a></h3>
+                                   <h3><a>Poradnictwo, pomoc psychologiczna</a></h3>
                                    <p>Skierowane do osób, które okresowo borykają się z ciężką sytuacją życiową, stoją przed trudnymi wyborami lub zmagają z wyzwaniami, wydającymi się ponad siły.
                                         Spotkania te są ukierunkowane na udzielenie wsparcia i&nbsppomoc w znalezieniu najlepszego rozwiązania problemu.</p>
                               </div>
@@ -146,11 +146,11 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                          <div class="news-thumb">
-                              <a href="#">
+                              <a>
                                    <img src="images/offer_image_3_800x533.jpg" class="img-responsive offer-image" alt="Psychoterapia indywidualna">
                               </a>
                               <div class="news-info">
-                                   <h3><a href="#">Psychoterapia indywidualna</a></h3>
+                                   <h3><a>Psychoterapia indywidualna</a></h3>
                                    <p>Jest formą leczenia. Przeznaczona dla osób, których trudności mają bardziej utrwalony charakter i&nbsprzutują na codzienne funkcjonowanie, często w&nbspróżnych obszarach życia (np. utrudniają budowanie relacji międzyludzkich).
                                         Jest to cykl regularnych spotkań odbywających się 1-2&nbsprazy w&nbsptygodniu.
                                         Długość trwania psychoterapii zależy od indywidualnych potrzeb i&nbspcharakteru problemu, z którym zgłasza się pacjent.</p>
