--- a/index.html
+++ b/index.html
@@ -321,17 +321,17 @@
           <div class="container">
                <div class="row">
                     <div class="col-md-12 col-sm-12 border-top">
-                         <div class="col-md-4 col-sm-4">
-                              <p>Izabela Witkowicz</p>
-                              <p>psychoterapeuta, psycholog</p>
-                              <p>Katowice</p>
+                         <div class="col-md-4 col-sm-12 text-align-center">
+                              <p>Izabela Witkowicz<br>
+                              psychoterapeuta, psycholog<br>
+                              Katowice</p>
                          </div>
-                         <div class="col-md-4 col-sm-4">
-                              <p>Telefon: <a href="tel:+48 795-876-144">+48 795-876-144</a></p>
-                              <p>E-mail: <a href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></p>
+                         <div class="col-md-4 col-sm-12 text-align-center">
+                              <p><a href="tel:+48 795-876-144">+48 795-876-144</a><br>
+                              <a href="mailto:psychoterapia.witkowicz@gmail.com">psychoterapia.witkowicz@gmail.com</a></p>
                          </div>
-                         <div class="col-md-3 col-sm-3">
-                              <p>Copyright &copy; 2018 Izabela Witkowicz</p>
+                         <div class="col-md-3 col-sm-12 text-align-center">
+                              <p>Copyright &copy; 2018<br>Izabela Witkowicz</p>
                          </div>
                          <div class="col-md-1 col-sm-1 text-align-center">
                               <div class="angle-up-btn">
