--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <title>Psychoterapeuta, psycholog, Katowice | Izabela Witkowicz</title>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="Psycholog Katowice. Psychoterapia Katowice. Leczenie nerwicy, depresji, pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
+     <meta name="description" content="Psycholog, psychoterapia Katowice. Leczenie nerwicy, depresji, pomoc w sytuacjach silnego stresu, kryzysach emocjonalnych i poczuciu osamotnienia.">
      <meta name="keywords" content="psycholog Katowice, psychoterapia Katowice, nerwica, depresja">
      <meta name="author" content="Paweł Witkowicz">
      <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1">
