--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                               </div>
                          </div>
                     </div>
-                    <div class="col-md-6 col-sm-6">
+                    <!--<div class="col-md-6 col-sm-6">
                          <div class="footer-thumb">
                               <div class="opening-hours">
                                    <h4>Centrum Psychologiczne PozaCzasem</h4>
@@ -311,7 +311,7 @@
                                    </p>
                               </div>
                          </div>
-                    </div>
+                    </div>-->
                     </div>
                </div>
           </div>
